Add Employee Form with Default Register Page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,3 +163,8 @@ url mouser color
     text-decoration: none;
     background-color: #f2f2f2;
 }
+
+/*employee checkbox */
+.permission {
+    padding-left: 20px;
+ }
